# OrbixaVPN

./: .env.example  .gitignore  ORBIXA_VPN_ARCHITECTURE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  compile_errors.txt  errors.txt  package-lock.json  package.json  pom.xml  render.yaml
backend/src/: debug_servers.ts  debug_users.ts  index.ts  remove_uuid.ts  seed.ts
backend/src/models/: Server.ts  User.ts
backend/src/routes/: auth.ts  vpn.ts
backend/src/services/: sshSync.ts
desktop/: README.md  package-lock.json  package.json
desktop-client/: electron-main.cjs  index.html  package-lock.json  package.json  preload.cjs  vite.config.ts
desktop-client/src/: App.tsx  index.css
desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
desktop-client/src-tauri/src/: main.rs
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  xray.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/contact-us/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/privacy-policy/: page.tsx
frontend/app/refund-policy/: page.tsx
frontend/app/register/: page.tsx
frontend/app/servers/: page.tsx
frontend/app/terms-and-conditions/: page.tsx
frontend/components/: ConsolePreview.tsx  Navbar.tsx
infrastructure/scripts/: add_user.sh  deploy_node.sh
infrastructure/xray/: config.json.template
(+24 files in other folders)
